IDMAPPS-2548  Reports are not operational in a clean install